# Soda

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  run_build.sh
cmake/modules/: CodeCoverage.cmake
include/blobdetect/: blobdetect.hpp
include/core/: commandlineparser.hpp  image.hpp  types.hpp
src/: CMakeLists.txt  CMakeLists_old.txt  sodaconfig.hpp.in
src/application/: CMakeLists.txt
src/application/cli/: CMakeLists.txt  main.cpp
src/application/gui/: CMakeLists.txt  framegrabberdatamodel.cpp  framegrabberdatamodel.hpp  imagepreviewdatamodel.cpp  imagepreviewdatamodel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  models.hpp  resources.qrc
src/blobdetect/: CMakeLists.txt  blob.cpp  blobdetect.cpp  blobdetect.hpp  channel.hpp
src/core/: CMakeLists.txt  commandlineparser.cpp  commandlineparser.hpp  core.cpp  image.hpp  types.cpp  types.hpp
src/framegrabber/: CMakeLists.txt  framegrabber.cpp  framegrabber.hpp  imagerenderer.cpp  imagerenderer.hpp  pluginconfig.hpp.in
src/interfaces/: CMakeLists.txt  applicationmodel.hpp  blob.hpp  channel.hpp  datamodel.hpp  frame.hpp  imageprocessor.hpp  imagesource.hpp  pluginregistry.hpp
src/interfaces/include/: applicationmodel.hpp  channel.hpp  color.hpp  frame.hpp  imageprocessor.hpp  imagesource.hpp  plugin.hpp
src/interfaces/src/: soda_image_source.cpp
src/networking/: CMakeLists.txt
src/opencv_adapter/: CMakeLists.txt
src/opencv_adapter/include/: image.hpp  image_processing.hpp  types.hpp  video_capture.hpp
src/opencv_adapter/src/: library.cpp  opencv_image.cpp  opencv_image_processing.cpp  opencv_video_capture.cpp
src/plugin/: CMakeLists.txt
src/plugin/blobdetect/: CMakeLists.txt  blob.hpp  blobdetect.cpp  blobdetect.hpp  channel.hpp
src/plugin/corenodes/: CMakeLists.txt  corenodesplugin.cpp  corenodesplugin.hpp  framegrabber.cpp  framegrabber.hpp  imagesender.cpp  imagesender.hpp
src/plugin/corenodesui/: CMakeLists.txt  corenodesuiplugin.cpp  corenodesuiplugin.hpp  framegrabbermodel.cpp  framegrabbermodel.hpp  framegrabberwidget.cpp  framegrabberwidget.hpp  framegrabberwidget.ui  imagepreviewmodel.cpp  imagepreviewmodel.hpp
src/plugin/framegrabber/: CMakeLists.txt  framegrabber.cpp  framegrabber.hpp  imagerenderer.cpp  imagerenderer.hpp
src/plugin/imagesender/: CMakeLists.txt  imagesender.cpp  imagesender.hpp
src/plugin/utillity/: CMakeLists.txt  framegrabber.cpp  framegrabber.h  framegrabber.hpp  imagerenderer.cpp  imagerenderer.hpp  utillity.cpp  utillity.hpp
src/soda_blob_detection/blobdetect/: blobdetect.cpp  blobdetect.hpp  channel.cpp  channel.hpp
src/soda_cli/: CMakeLists.txt  main.cpp
src/soda_framegrabber/: CMakeLists.txt  framegrabber.hpp  imagerenderer.cpp  imagerenderer.hpp  utillity.cpp
src/soda_networking/: CMakeLists.txt  tcpserver.hpp
src/soda_opencv_gui/: CMakeLists.txt  main.cpp
src/soda_plugin_api/: CMakeLists.txt  imageprocessor.hpp
src/soda_plugin_manager/: CMakeLists.txt
src/soda_qt5_gui/: CMakeLists.txt  main.cpp
src/soda_qt5_gui/forms/: AboutDialog.qml  AboutDialogForm.ui.qml  AboutDialogForm.ui.qmlc  MainWindow.qml  MainWindow.qmlc  ResourcePanel.ui.qml  ResourcePanel.ui.qmlc  resources.qrc
src/soda_qt5_gui/resources/: resources.qrc
src/soda_qt5_gui/resources/images/: robotik-logo.eps
src/soda_qt5_gui/src/: aboutdialog.ui  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmlapplication.cpp  qmlapplication.h
test/: CMakeLists.txt  tests.cpp
