# ----------------------------------------------------------------------------
#
#
# ----------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

# Add subdirectories
add_subdirectory(includes)
add_subdirectory(framegrabber)
add_subdirectory(soda_blob_detection)
add_subdirectory(soda_networking)
add_subdirectory(soda_qt5_gui)
add_subdirectory(soda_cli)
