PROJECT(tests C CXX)

# Add external Libraries

# Qt
LIST(APPEND INCLUDES ${QT_INCLUDES})
LIST(APPEND LIBRARIES Qt5::Test)

# Add internal Libraries
LIST(APPEND INCLUDES ${pluginManager_INCLUDES})
LIST(APPEND LIBRARIES ${pluginManager_LIBS})

FILE(GLOB_RECURSE SOURCE_FILES "*.?pp")
  
IF(SODA_BUILD_TESTS)
  ENABLE_TESTING()
  INCLUDE_DIRECTORIES(${INCLUDES} ${PROJECT_SOURCE_DIR})
  ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})

  IF(SODA_GENERATE_COVERAGE AND CMAKE_COMPILER_IS_GNUCXX)
    INCLUDE(CodeCoverage)
    setup_target_for_coverage(TestCoverage tests coverage)
  ENDIF(SODA_GENERATE_COVERAGE AND CMAKE_COMPILER_IS_GNUCXX)
ELSE(SODA_BUILD_TESTS)
  ADD_CUSTOM_TARGET(${PROJECT_NAME} SOURCES ${SOURCE_FILES})
ENDIF(SODA_BUILD_TESTS)
